# geodesic-ig

./: .gitignore  LICENSE  README.md  pyproject.toml  results.csv  results_analysis.ipynb
.github/workflows/: generate_text.yml
experiments/gnn/: protein.py  proteins_interaction.py  twitch.py
experiments/moons/: main.py
experiments/voc/: README.md  classifier.py  constants.py  main.py  main.sh  train_classifier.py  train_classifier_softmax.py
geodesic/: feature_ablation.py  geodesic_ig.py  integrated_gradients.py  ode_ig.py  ode_ig_2.py  ode_ig_3.py  svi_batching.py  svi_ig.py
geodesic/attr/: __init__.py  augmented_occlusion.py  feature_ablation.py  geodesic_knn_ig.py  geodesic_svi_ig.py  occlusion.py  svi_ig.py
geodesic/metrics/: __init__.py  acc.py  base.py  ce.py  compreh.py  log_odds.py  suff.py
geodesic/models/: __init__.py  mlp.py  net.py
geodesic/utils/: a_star_path.py  attibute_helper.py  batching.py  common.py  pyg_explainer.py  svi_batching.py  tqdm.py
moons/: main.py
paper/: acknowledgements.tex  appendix.tex  bib.bib  discussion.tex  experiments.tex  introduction.tex  main.aux  main.bbl  main.blg  main.out  main.tex  method.tex  related_work.tex
paper/example/: example_paper.tex
paper/figures/: voc_compare.xcf
tests/: README.md
tests/attr/: test_augmented_occlusion.py  test_occlusion.py
tests/metrics/: test_comprehensiveness.py  test_log_odds.py
tests/models/: test_mlp.py  test_net.py
