[tool.poetry]
name = "geodesic"
version = "0.1.0"
description = ""
authors = ["sinasalek <salek.sina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
torch = "2.2.2"
captum = "^0.7.0"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
pytorch-lightning = "^2.4.0"
tqdm = "^4.67.1"
jupyter = "^1.1.1"
torch-geometric = "^2.6.1"
pytest = "^8.3.4"
black = "^24.10.0"
torchvision = "^0.17"
timm = "^1.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
